--- a/ICPC/ICPC_2022-25.md
+++ b/ICPC/ICPC_2022-25.md
@@ -1,5 +1,5 @@
 <p align="center">
-	<img src="../Assets/images/AVV_TIFAC-CORE_in_Cyber_Security.png" alt ="AMRITA-TIFAC-CYBER" width="880" />
+	<img src="../Assets/images/AVV_TIFAC-CORE_in_Cyber_Security.png" alt ="AMRITA-TIFAC-CYBER" width="680" />
 </p>
 
 <h1>ICPC - International Collegiate Programming Contest</h1>
@@ -24,4 +24,18 @@
 | 1 | Hamswenee | [Avi Nair](https://icpc.global/ICPCID/VYWZFNBQ69SX) <br/> [Joshua Anto A]() <br/> [Ramraj S](https://icpc.global/ICPCID/5OEWCXMRIZVJ) | 404 | 1177 | 181 |
 | 2 | Ethereal Equations | [Amal Ritessh A P](https://icpc.global/ICPCID/NVHNR6RDKTJC) <br/> [Mukesh R](https://icpc.global/ICPCID/20IT96VKKNPE) <br/> [Sree Sharvesh S S](https://icpc.global/ICPCID/GO9AI1TEQ2PA) | 9 | 1405 | NA |
 | 3 | Br0s_C0d3_;-) | [Rushyendra Burla](https://icpc.global/ICPCID/ELA9MDO38EQP) <br/> [Mohana Vamsi Sowdepally](https://icpc.global/ICPCID/X2GWUDTE3TVB) <br/> [Arul Sujith S](https://icpc.global/ICPCID/IXRTFRBHTL32) | 577 | 1399 | NA | 
+
+## ICPC 2024-2025 ![](https://img.shields.io/badge/22UCYS-blue)
+
+#### [ICPC Amritapuri, Chennai, Kanpur Preliminary 2024]()  ![](https://img.shields.io/badge/-Participated-brightgreen) ![](https://img.shields.io/badge/-DOMJudge-purple)
+-  16 Nov 2023, Sat 18:00 - 21:00 (3 Hours)
+
+#### [ICPC Amritapuri, Chennai, Kanpur Preliminary 2024 (Recontest)]()  ![](https://img.shields.io/badge/-Participated-brightgreen) ![](https://img.shields.io/badge/-CodeChef-purple)
+-  23 Nov 2023, Sat 21:00 - 23:30 (2.5 Hours)
+
+| S. No. | Team Name | Team Members | Practice  | Prelims | Prelims (Recontest) | 
+|:------:|:---------:|:------------:|:--------:|:----------:|:-------:|
+| 1 | WildImpala <br/> ![](https://img.shields.io/badge/-Amritapuri-purple) | [Avi Nair](https://icpc.global/ICPCID/VYWZFNBQ69SX) <br/> [Joshua Anto A]() <br/> [Ramraj S](https://icpc.global/ICPCID/5OEWCXMRIZVJ)  | 250 | 1476 | 1267 (1247) |
+| 2 | Br0s_C0d3_;-) <br/> ![](https://img.shields.io/badge/-Amritapuri-purple)  ![](https://img.shields.io/badge/-Chennai-purple) | [Mohana Vamsi Sowdepally](https://icpc.global/ICPCID/X2GWUDTE3TVB) <br/> [Mukesh R](https://icpc.global/ICPCID/20IT96VKKNPE) <br/> [Sree Sharvesh S S](https://icpc.global/ICPCID/GO9AI1TEQ2PA)  | NA | 1699 | 693 | 
+
 
