--- a/ICPC/ICPC_2021-23.md
+++ b/ICPC/ICPC_2021-23.md
@@ -1,5 +1,5 @@
 <p align="center">
-	<img src="../Assets/images/AVV_TIFAC-CORE_in_Cyber_Security.png" alt ="AMRITA-TIFAC-CYBER" width="880" />
+	<img src="../Assets/images/AVV_TIFAC-CORE_in_Cyber_Security.png" alt ="AMRITA-TIFAC-CYBER" width="680" />
 </p>
 
 <h1>ICPC - International Collegiate Programming Contest</h1>
@@ -17,7 +17,7 @@
 
 | S. No. | Team Name | Team Members | Position @ Qualifier | 
 |:------:|:---------:|:------------:|:--------:|
-| 1 | PotatoFirstSearch | Ashwin Anand <br/> Dyanesh S <br/> Rajendraprasad S |   ![](https://img.shields.io/badge/-607-gold) <br/> [Honorable Mention](Cert/Certificate_Place_2022-23.pdf) | 
+| 1 | PotatoFirstSearch | Ashwin Anand <br/> Dyanesh S <br/> Rajendraprasad S |   ![](https://img.shields.io/badge/-607-gold) <br/> [Honorable Mention](../Assets/certificates/2022_Amritapuri_First_Round_Online_Honorable_Mention.pdf) | 
 
 ## ICPC 2021-2022 ![](https://img.shields.io/badge/21UCYS-blue)
 #### [ICPC India 2021 Practice Session](https://codedrills.io/contests/icpc-india-2021-practice-session)  ![](https://img.shields.io/badge/-Participated-brightgreen)
