--- a/ICPC/ICPC_2022-25.md
+++ b/ICPC/ICPC_2022-25.md
@@ -21,17 +21,17 @@
 
 | S. No. | Team Name | Team Members | Practice  | Prelims | Regionals | 
 |:------:|:---------:|:------------:|:--------:|:----------:|:-------:|
-| 1 | Hamswenee | [Avi Nair](https://icpc.global/ICPCID/VYWZFNBQ69SX) <br/> [Joshua Anto A]() <br/> [Ramraj S](https://icpc.global/ICPCID/5OEWCXMRIZVJ) | 404 | 1177 | 181 |
+| 1 | Hamswenee | [Avi Nair](https://icpc.global/ICPCID/VYWZFNBQ69SX) <br/> [Joshua Anto A]() <br/> [Ramraj S](https://icpc.global/ICPCID/5OEWCXMRIZVJ) | 404 | 1177 | ![](https://img.shields.io/badge/-181-gold) <br/> [Honorable Mention](../Assets/certificates/2023_Asia_Amritapuri_Doublesite_RC_Honorable_Mention.pdf) |
 | 2 | Ethereal Equations | [Amal Ritessh A P](https://icpc.global/ICPCID/NVHNR6RDKTJC) <br/> [Mukesh R](https://icpc.global/ICPCID/20IT96VKKNPE) <br/> [Sree Sharvesh S S](https://icpc.global/ICPCID/GO9AI1TEQ2PA) | 9 | 1405 | NA |
 | 3 | Br0s_C0d3_;-) | [Rushyendra Burla](https://icpc.global/ICPCID/ELA9MDO38EQP) <br/> [Mohana Vamsi Sowdepally](https://icpc.global/ICPCID/X2GWUDTE3TVB) <br/> [Arul Sujith S](https://icpc.global/ICPCID/IXRTFRBHTL32) | 577 | 1399 | NA | 
 
 ## ICPC 2024-2025 ![](https://img.shields.io/badge/22UCYS-blue)
 
 #### [ICPC Amritapuri, Chennai, Kanpur Preliminary 2024]()  ![](https://img.shields.io/badge/-Participated-brightgreen) ![](https://img.shields.io/badge/-DOMJudge-purple)
--  16 Nov 2023, Sat 18:00 - 21:00 (3 Hours)
+-  16 Nov 2024, Sat 18:00 - 21:00 (3 Hours)
 
 #### [ICPC Amritapuri, Chennai, Kanpur Preliminary 2024 (Recontest)]()  ![](https://img.shields.io/badge/-Participated-brightgreen) ![](https://img.shields.io/badge/-CodeChef-purple)
--  23 Nov 2023, Sat 21:00 - 23:30 (2.5 Hours)
+-  23 Nov 2024, Sat 21:00 - 23:30 (2.5 Hours)
 
 | S. No. | Team Name | Team Members | Practice  | Prelims | Prelims (Recontest) | 
 |:------:|:---------:|:------------:|:--------:|:----------:|:-------:|
